[gd_scene load_steps=2 format=3 uid="uid://c7fre1iwwkd4x"]

[ext_resource type="Script" uid="uid://cri207b3lyg74" path="res://scripts/menu/pause_menu.gd" id="1_n54lc"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n54lc")

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Paused!"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Quit
"

[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/PlayButton" to="PauseMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
